syntax = "proto3";

package api;

option go_package = "com.github/stepasite/webapp-grpc/grpc/proto/api;grpc_api";

service LoginService {
  // unary call
  rpc Login(LoginRequest) returns (LoginReply);
}

service StreamingNewsService {
  // server streaming call
  rpc StreamNews(RepeatNewsRequest) returns (stream NewsReply);
}

message LoginRequest {
  string loginToken = 1;
}

message RepeatNewsRequest {
  int32 count = 1;
}

message LoginReply {
  int32 status = 1;
  string token = 2;
}

message NewsReply {
  int32 id = 1;
  string message = 2;
}
